--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="C:/Isaac Z/Godot_v4.2-stable_win64.exe/Godot_v4.2-stable_win64.exe"
 
 [debug_options]
 
@@ -11,6 +11,7 @@ run_reload_scripts=true
 
 Node3D:scale=true
 CSGBox3D:scale=true
+CSGSphere3D:scale=true
 
 [dialog_bounds]
 
