--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main_gui.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://LoadingButton.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,15 +29,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main_gui.tscn")
 current_scene="res://main_gui.tscn"
-center_split_offset=0
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://LoadingButton.gd"]
+selected_script="res://LoadingButton.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
