--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,32 +13,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-202
 dock_hsplit_4=0
 dock_filesystem_split=0
-dock_filesystem_display_mode=0
+dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_3d.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_3d.tscn")
-current_scene="res://node_3d.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://newtonscradele.tscn", "res://rope.tscn", "res://ropeSegment.tscn", "res://Circle.tscn")
+current_scene="res://newtonscradele.tscn"
+center_split_offset=-194
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=[]
 selected_script=""
-open_help=[]
+open_help=["PinJoint2D"]
 script_split_offset=70
 list_split_offset=0
 
