--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=2
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,31 +13,31 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-388
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_3d.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_5="Inspector,History,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_3d.tscn")
-current_scene="res://node_3d.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Character.tscn", "res://node_2d.tscn")
+current_scene="res://Character.tscn"
+center_split_offset=-351
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://CharacterBody2D.gd"]
+selected_script="res://CharacterBody2D.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
