--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,17 +9,17 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=0
+dock_split_2=-8
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-401
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sonic Ring - Sound Effect (HD).mp3")
+dock_filesystem_selected_paths=PackedStringArray("res://yahh.jpg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://node_2d.tscn")
 current_scene="res://node_2d.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://AudioStreamPlayer2D.gd", "res://CharacterBody2D.gd", "res://RigidBody2D.gd"]
+open_scripts=["res://CharacterBody2D.gd", "res://RigidBody2D.gd"]
 selected_script="res://RigidBody2D.gd"
-open_help=["CollisionObject2D", "RigidBody2D"]
+open_help=[]
 script_split_offset=150
 list_split_offset=0
 
