--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main_gui.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,19 +27,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://ballgame.tscn", "res://main_gui.tscn")
-current_scene="res://ballgame.tscn"
+open_scenes=PackedStringArray("res://ballgame.tscn", "res://main_gui.tscn", "res://dragging_project.tscn", "res://world_border.tscn")
+current_scene="res://dragging_project.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://LoadingButton.gd"]
-selected_script=""
-open_help=["Button"]
-script_split_offset=70
+open_scripts=["res://RigidBody2D.gd", "res://world_border.gd"]
+selected_script="res://RigidBody2D.gd"
+open_help=["Area2D"]
+script_split_offset=249
 list_split_offset=0
 
 [ShaderEditor]
