--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=2
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://sprites/fishCurser.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,18 +28,18 @@ dock_5="Inspector,History,Node"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Character.tscn", "res://node_2d.tscn")
-current_scene="res://Character.tscn"
-center_split_offset=-351
+current_scene="res://node_2d.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://CharacterBody2D.gd"]
-selected_script="res://CharacterBody2D.gd"
-open_help=[]
-script_split_offset=70
+open_scripts=["res://CharacterBody2D.gd", "res://fishCurser.gd"]
+selected_script="res://fishCurser.gd"
+open_help=["Object"]
+script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
