--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,18 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://newtonscradele.tscn", "res://rope.tscn", "res://ropeSegment.tscn", "res://Circle.tscn")
+open_scenes=PackedStringArray("res://newtonscradele.tscn", "res://rope.tscn", "res://ropeSegment.tscn", "res://Circle.tscn", "res://draggableball.tscn")
 current_scene="res://newtonscradele.tscn"
-center_split_offset=-194
+center_split_offset=-216
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=["PinJoint2D"]
+open_scripts=["res://Circle.gd", "res://RigidBody2D.gd"]
+selected_script="res://Circle.gd"
+open_help=["\"Circle.gd\"", "PinJoint2D"]
 script_split_offset=70
 list_split_offset=0
 
