--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://RigidBody2D.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://balldragging.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://dragging_project.gd", "res://RigidBody2D.gd", "res://world_border.gd"]
+open_scripts=["res://dragging_project.gd", "res://balldragging.gd", "res://world_border.gd"]
 selected_script="res://dragging_project.gd"
 open_help=["Area2D", "InputEvent", "InputEventScreenDrag", "Node", "RigidBody2D", "RigidBody3D", "WorldBoundaryShape2D"]
 script_split_offset=249
