--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -40,20 +40,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://RigidBody2D.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 19,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 31,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://dragging_project.gd]
 
 state={
@@ -63,6 +49,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://balldragging.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
