--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -16,28 +16,28 @@ dock_hsplit_2=270
 dock_hsplit_3=-388
 dock_hsplit_4=0
 dock_filesystem_split=0
-dock_filesystem_display_mode=2
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://balldragging.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,History,Node"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://ballgame.tscn", "res://main_gui.tscn", "res://dragging_project.tscn", "res://world_border.tscn", "res://draggableball.tscn")
-current_scene="res://ballgame.tscn"
+open_scenes=PackedStringArray("res://ballgame.tscn", "res://main_gui.tscn", "res://dragging_project.tscn", "res://world_border.tscn", "res://draggableball.tscn", "res://node_2d.tscn")
+current_scene="res://main_gui.tscn"
 center_split_offset=-288
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://dragging_project.gd", "res://balldragging.gd", "res://world_border.gd"]
-selected_script="res://dragging_project.gd"
+open_scripts=["res://balldragging.gd", "res://dragging_project.gd", "res://fishCurser.gd", "res://world_border.gd"]
+selected_script="res://fishCurser.gd"
 open_help=["Area2D", "InputEvent", "InputEventScreenDrag", "Node", "RigidBody2D", "RigidBody3D", "WorldBoundaryShape2D"]
 script_split_offset=249
 list_split_offset=0
